refactor(document/Content): McidContent includes content kinds